[tool.poetry]
name = "einchain"
version = "0.1.0"
description = ""
authors = ["Oli Clive-Griffin <o.clivegriffin@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
torch = "^2.3.0"
einops = "^0.8.0"

[tool.poetry.group.dev.dependencies]
torch = "^2.3.0"
einops = "^0.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
